Thu Apr 28 09:54:55 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/tables.c: be more verbose

Mon Apr 25 13:59:52 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h: use tinyint for column_type

Sun Apr 24 20:24:26 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/prepare_results.c:
	- fix problem preparing before binding parameters

Sat Apr 23 16:55:00 CDT 2011     Craig A. Berry <craigberry@mac.com>
	* vms/descrip_mms.template
	- Build more of the newer tests we weren't building.
 
Fri Apr 22 16:13:04 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/.cvsignore src/tds/Makefile.am src/tds/data.c:
	- avoid header name clash

Fri Apr 15 08:56:07 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/config.c: fix overriding port or instance

Wed Apr 13 22:45:23 EDT 2011	JK Lowden <jklowden@freetds.org>
	* doc/.cvsignore doc/userguide.sgml src/tds/config.c
	- minor changes to log messages 

Tue Apr 12 11:26:29 EDT 2011	JK Lowden <jklowden@freetds.org>
	* src/dblib/bcp.c 
	- bcp_send row returns FAIL if dbconvert fails to 
	- convert the bound buffer to the column datatype

Mon Apr 11 17:33:38 EDT 2011	JK Lowden <jklowden@freetds.org>
	* include/tds.h include netinet/in.h

Mon Apr 11 15:43:45 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/challenge.c: fix OpenSSL compile problem

Mon Apr 11 11:56:44 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/defncopy.c:
	- include sybfront.h instead of sqlfront.h (from patches #3172166)

Sat Apr  9 10:02:49 EDT 2011	JK Lowden <jklowden@freetds.org>
	* ChangeLog ChangeLog-0.91 start a new change log

Sat Apr  9 08:48:22 EDT 2011	JK Lowden <jklowden@freetds.org>
	* doc/Makefile.am make dist works

Thu Apr  7 10:06:28 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/freebcp.c src/dblib/bcp.c:
	- bcp path from Bill Thompson: support FIRE_TRIGGERS hint, fix -h